chore: cherry-pick infused tools & iesnium familiars from 26.1.2
Cherry-pick of commit 6d3600461fc6e57b6f458afad7c0469dc38873d5
from version/26.1.2 branch, with merge conflicts resolved for 26.2 API.

Includes Drikwing/Wingnis familiars, infused armor/tools,
flaming paste, familiar glove, ritual catcher, and iesnium items.