@@ -22,14 +22,12 @@
 
 package com.klikli_dev.occultism.common.entity.familiar;
 
-import com.google.common.collect.ImmutableList;
 import com.klikli_dev.occultism.common.advancement.FamiliarTrigger.Type;
+import com.klikli_dev.occultism.common.capability.FamiliarSettingsData;
 import com.klikli_dev.occultism.registry.OccultismAdvancements;
-import com.klikli_dev.occultism.registry.OccultismItems;
-import com.klikli_dev.occultism.util.ItemTransferUtil;
+import com.klikli_dev.occultism.registry.OccultismDataStorage;
 import com.mojang.logging.LogUtils;
 import net.minecraft.core.BlockPos;
-import net.minecraft.core.component.DataComponents;
 import net.minecraft.core.particles.BlockParticleOption;
 import net.minecraft.core.particles.ParticleTypes;
 import net.minecraft.network.syncher.EntityDataAccessor;
@@ -39,31 +37,27 @@ import net.minecraft.network.syncher.SynchedEntityData.Builder;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.sounds.SoundEvents;
 import net.minecraft.util.Mth;
-import net.minecraft.util.ProblemReporter.ScopedCollector;
 import net.minecraft.world.DifficultyInstance;
-import net.minecraft.world.damagesource.DamageSource;
 import net.minecraft.world.effect.MobEffectInstance;
+import net.minecraft.world.effect.MobEffects;
 import net.minecraft.world.entity.EntitySpawnReason;
 import net.minecraft.world.entity.EntityType;
-import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.SpawnGroupData;
 import net.minecraft.world.entity.ai.goal.FollowMobGoal;
 import net.minecraft.world.entity.ai.goal.LookAtPlayerGoal;
 import net.minecraft.world.entity.ai.goal.WaterAvoidingRandomStrollGoal;
-import net.minecraft.world.entity.item.ItemEntity;
 import net.minecraft.world.entity.player.Player;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.component.TypedEntityData;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.ServerLevelAccessor;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.state.BlockState;
-import net.minecraft.world.level.storage.TagValueOutput;
 import net.minecraft.world.level.storage.ValueInput;
 import net.minecraft.world.level.storage.ValueOutput;
 import org.slf4j.Logger;
 
 import javax.annotation.Nullable;
+import java.util.ArrayList;
+import java.util.List;
 
 public class GuardianFamiliarEntity extends ColoredFamiliarEntity {
 
@@ -113,7 +107,7 @@ public class GuardianFamiliarEntity extends ColoredFamiliarEntity {
 
     @Override
     public boolean canBlacksmithUpgrade() {
-        return this.getLives() != MAX_LIVES;
+        return this.getLives() < MAX_LIVES;
     }
 
     @Override
@@ -132,10 +126,8 @@ public class GuardianFamiliarEntity extends ColoredFamiliarEntity {
     }
 
     @Override
-    public void setFamiliarOwner(LivingEntity owner) {
-        if (this.hasTree())
-            OccultismAdvancements.FAMILIAR.get().trigger(owner, Type.RARE_VARIANT);
-        super.setFamiliarOwner(owner);
+    public boolean hasRareVariant() {
+        return this.hasTree();
     }
 
     @Override
@@ -179,7 +171,20 @@ public class GuardianFamiliarEntity extends ColoredFamiliarEntity {
 
     @Override
     public Iterable<MobEffectInstance> getFamiliarEffects() {
-        return ImmutableList.of();
+        if (this.effectDefinitionList == null || this.effectDefinitionList.isEmpty() || this.getLives() <= 0)
+            return List.of();
+
+        FamiliarSettingsData data = this.getOwner().getData(OccultismDataStorage.FAMILIAR_SETTINGS.get());
+        List<MobEffectInstance> effects = new ArrayList<>(this.effectDefinitionList.size());
+        for (var effect : this.effectDefinitionList) {
+            int amp = effect.getValue(this);
+            amp = Math.min(amp, data.getEffectAmplifier(this.getFamiliarEntity().getType(), effect.effect()));
+            if (amp >= 0) {
+                amp = effect.effect() == MobEffects.RESISTANCE ? (this.getLives()-1)/2 : this.getLives() - 1;
+                effects.add(new MobEffectInstance(effect.effect(), 300, amp, false, false));
+            }
+        }
+        return effects;
     }
 
     public boolean hasTree() {
@@ -238,41 +243,12 @@ public class GuardianFamiliarEntity extends ColoredFamiliarEntity {
     }
 
     @Override
-    protected void dropFromLootTable(ServerLevel level, DamageSource pDamageSource, boolean pAttackedRecently) {
-        super.dropFromLootTable(level, pDamageSource, pAttackedRecently);
-
-        //copied from parent to also modify lives before saving to item
-
-        var owner = this.getFamiliarOwner();
-
-        var shard = new ItemStack(OccultismItems.SOUL_SHARD_ITEM.get());
-
-        var health = this.getHealth();
-        this.setHealth(this.getMaxHealth()); //simulate a healthy familiar to avoid death on respawn
-        this.resetFallDistance();
-        this.removeAllEffects();
-
-        var lives = this.getLives();
-        this.setLives((byte) (this.getRandom().nextInt(5) + 1)); //randomize lives for next respawn
-
-        try (ScopedCollector reporter = new ScopedCollector(this.problemPath(), LOGGER)) {
-            TagValueOutput output = TagValueOutput.createWithContext(reporter, this.registryAccess());
-            this.saveWithoutId(output);
-            shard.set(DataComponents.ENTITY_DATA, TypedEntityData.of(this.getType(), output.buildResult()));
-        }
-
-        this.setHealth(health);
-        this.setLives(lives);
-
-        if (owner instanceof Player player) {
-            ItemTransferUtil.giveItemToPlayer(player, shard);
-        } else {
-            ItemEntity entityitem = new ItemEntity(this.level(), this.getX(), this.getY() + 0.5, this.getZ(), shard);
-            entityitem.setPickUpDelay(5);
-            entityitem.setDeltaMovement(entityitem.getDeltaMovement().multiply(0, 1, 0));
-
-            this.level().addFreshEntity(entityitem);
-        }
+    protected void resetCustomFamiliarData() {
+        //randomize lives for next respawn
+        int i = this.hasIesniumUpgrade() ? this.getRandom().nextInt(1) + 5 :
+                this.hasBlacksmithUpgrade() ? this.getRandom().nextInt(2) + 3 :
+                this.getRandom().nextInt(3) + 1;
+        this.setLives((byte) i);
     }
 }
 
